--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\s.lucas.DESKTOP-37MDHBF\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\s.lucas.DESKTOP-Q8FHC1H\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
